modif sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,18 @@
 sonar.projectBaseDir=./
+# SonarQube instance
 sonar.projectKey=TP_ESEO
+# name and version displayed in the SonarQube UI
 sonar.projectName=TP_ESEO
-sonar.projectVersion=1.1
+#sonar.projectVersion=0.0.1-SNAPSHOT
+sonar.projectVersion=${project.version} 
+
 sonar.sources=src/main/java
 sonar.java.binaries=.
+#sonar.language=java
+
+# Encoding of the source code.
+#Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+# Debug
+sonar.verbose=true
